@@ -1,4 +1,7 @@
-2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b289
+2004-11-29  Chris Kelly <ckdake@users.sf.net> 1.5-cvs-b291
+	Fix: added isDebugging to a place it needed to be in util.php
+
+2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b290
 	New: add css to define text in add_photos.php
 
 2004-11-28 JoEllen Drazan <skins@pownuke.com> 1.5-cvs-b289
